--- a/partials/tandimplantat.html
+++ b/partials/tandimplantat.html
@@ -9,7 +9,7 @@
 
 <p>Vilka förutsättningar man har för att få implantat kontrolleras vid undersökningen, då vi kontrollerar hur benvolymen ser ut och kartlägger nervstrukturer inför behandlingen. Vi har en diskussion angående förväntningar och resultat och ibland kan det vara rekommenderat att göra en tandbro. Till exempel om det finns risk för nervskador eller om tänderna bredvid tandluckan har äldre, större fyllningar som är skadade sedan innan.</p>
 
-<p>Vi arbetar i huvudsak med Straumann Implant System när vi utför kirurgin och protetiken. Straumann är ett ytterst väldokumenterat implantatsystem med många studier och mycket forskning bakom sina implantat. Mer om Straumann finns att läsa här LÄNK SAKNAS!. Vi har även protetiska verktyg för att kunna jobba med Astra, Nobel Biocare och 3i. Det gör att vi kan hjälpa dig som har en trasig implantatkonstruktion med något av dessa system, som du behöver få reparerad eller förnyad.</p>
+<p>Vi arbetar i huvudsak med Straumann Implant System när vi utför kirurgin och protetiken. Straumann är ett ytterst väldokumenterat implantatsystem med många studier och mycket forskning bakom sina implantat. Vi har även protetiska verktyg för att kunna jobba med Astra, Nobel Biocare och 3i. Det gör att vi kan hjälpa dig som har en trasig implantatkonstruktion med något av dessa system, som du behöver få reparerad eller förnyad.</p>
 
 
 
